--- a/style.css
+++ b/style.css
@@ -496,8 +496,57 @@ footer {
     width: 10%;
 }
 
+/* LOGIN */
+.login {
+    display: grid;
+    grid-auto-flow: column;
+    grid-auto-columns: 1fr 2fr;
+}
+
+.side1 {
+    padding: 3rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    height: 100vh;
+    background-color: #CAC6B3;
+
+}
+
+.side2 {
+    padding-inline: 12rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.wel {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 4rem;
+}
 
 
+.auth__form {
+    /* margin-top: 4rem; */
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+
+
+
+.auth__form input {
+    display: block;
+    width: 100%;
+    padding: .7rem;
+    border-radius: 10px;
+    border: 1px solid var(--secondary-color);
+}
 
 /* CONTACT P[AGE */
 
